2005-11-10  Kevin P. Fleming  <kpfleming@digium.com>

	* channels/iax2-provision.c (iax_provision_reload): don't leak memory (issue #5700)

	* pbx/pbx_ael.c (handle_macro): don't leak memory (issue #5701)
	(handle_context): ditto

	* res/res_features.c (load_config): properly initialize referenced variable (issue #5703)

	* apps/app_queue.c (rqm_exec): correct segfault problem (issue #5705)
	(aqm_exec): ditto

	* app.c (ast_app_parse_options): don't increment 's' until after checking for NULL (related to issue #5630)

	* apps/app_rpt.c: solve a memory leak (config structure was not freed) (issue #5706

2005-11-10  Russell Bryant <russell@digium.com>

	* app.c (ast_app_separate_args): Don't consider the open parenthesis as part of the arguments to an option. (issue #5630)
	* many files: Change all references to ast_separate_app_args to ast_app_separate_args
	* many files in apps/: Clean up some application descriptions. Make sure all descriptions in changed files are wrapped at 80 characters.

2005-11-09  Russell Bryant <russell@digium.com>

	* pbx.c: Clean up descriptions of built-in dialplan applications. Changes include clearer wording and not referring to return values.

2005-11-09  Kevin P. Fleming  <kpfleming@digium.com>

	* channels/chan_iax2.c (update_registry): don't complain about unspecifed registration expiration intervals, just use the minimum

2005-11-08  Kevin P. Fleming  <kpfleming@digium.com>

	* Asterisk 1.2.0-rc1 released.

	* include/asterisk/file.h: add test to ensure that stdio.h is included before this file (issue #5658)

	* res/res_odbc.c (odbc_prepare_and_execute): add new API call for use to properly handle prepared statements across server disconnects (issue #5563)

	* pbx.c (pbx_substitute_variables_helper_full): use already-substituted buffer for parsing variable name (issue #5664)
